--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2"
   }
 }
