made preparation to deploy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web API Blog Project",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2"
