--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "concurrently \"npm run server\" \"cd client && npm run start\""
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,14 @@
   },
   "homepage": "https://github.com/LambdaSchool/Node-Blog#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "knex": "^0.18.3",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
+    "concurrently": "^4.1.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2"
