--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "dev": "concurrently \"npm run server\" \"cd client && npm run start\""
   },
   "repository": {
